--- a/index.html
+++ b/index.html
@@ -49,23 +49,22 @@
     </nav>
 
     <section class="herosaham mt-5">
-        <div class="container-fluid mb-5 pb-3">
+        <div class="container mb-5 pb-3">
 
             <div class="row">
-                <div class="col mb-4 mt-3 pt-3  align-self-center">
+                <div class="col mb-4 mt-3 pt-3 align-self-center">
                     <h1 class="mb-4 ">
                         WatfordCorp
                     </h1>
-                    <p class="mb-4">
-                        Watford LLC adalah perusahaan induk dari beberapa perusahaan individu di berbagai bidang. Di bidang pertambangan, ia memegang perusahaan Goldmine BMD yang aktif di 5 wilayah pertambangan utama di dunia. Di bidang energi dan lingkungan, ia memegang perusahaan
-                        EDV-Recycling yang mendaur ulang sampah menjadi uang di Haiti dan daerah lain. Di bidang energy terbarukan ada NMW Energy yang menjadikan renewable energy sebagai penghasilan utama. Dan di bidang farmasi ada perusahaan Marijuana
-                        Diet yang mengolah tanaman herbal menjadi obat-obatan.
+                    <p class="mb-5">
+                        Watford LLC adalah perusahaan induk dari beberapa perusahaan individu di berbagai bidang seperti pertambangan, energi dan lingkungan, energi terbarukan, serta bidang farmasi
+                        
                     </p>
                     <a class="btn btn-primary2" target="_blank" href="http://bit.ly/WatfordLlcCorp" role="button">Daftar Watford</a>
                 </div>
 
                 <div class="tombolkuh  d-none d-sm-block mr-0 pr-0">
-                    <img width="700" src="images/home.jpg" alt=" ">
+                    <img width="700" src="images/heroweb23.png" alt=" ">
                 </div>
 
 
